--- a/roles/vpn/templates/openvpn.conf
+++ b/roles/vpn/templates/openvpn.conf
@@ -2,12 +2,7 @@
 
 server {{ openvpn.conf.server.v4.netaddress }} {{ openvpn.conf.server.v4.netmask }}
 {% if networks.vpn.v6.enable %}
-{%   if openvpn.use_host_net %}
-server-ipv6 {{ networks.host.v6.subnet }}
-{%   else %}
 server-ipv6 {{ openvpn.conf.server.v6.netaddress }}/{{ openvpn.conf.server.v6.netmask }}
-{%   endif %}
-
 tun-ipv6
 {% endif %}
 
@@ -48,7 +43,9 @@ push "route {{ networks.host.v4.netaddress }} {{ networks.host.v4.netmask }}"
 {% else %}
 push "route {{ networks.pihole.v4.netaddress }} {{ networks.pihole.v4.netmask }}"
 {% endif %}
+{% if openvpn.use_host_net == false %}
 push "route {{ networks.vpn.v4.netaddress }} {{ networks.vpn.v4.netmask }}"
+{% endif %}
 
 {% if networks.vpn.v6.enable %}
 {%   if pihole.use_host_net %}
@@ -56,7 +53,9 @@ push "route-ipv6 {{ networks.host.v6.subnet }}"
 {%   else %}
 push "route-ipv6 {{ networks.pihole.v6.subnet }}"
 {%   endif %}
+{% if openvpn.use_host_net == false %}
 push "route-ipv6 {{ networks.vpn.v6.subnet }}"
+{% endif %}
 {% endif %}
 
 ### Push Configurations Below
