--- a/roles/pihole/templates/docker-compose.yml
+++ b/roles/pihole/templates/docker-compose.yml
@@ -103,11 +103,7 @@ services:
 {#                 We need to escape $-sign with two $$-signs #}
       WEBPASSWORD: '{{ gen.pw("web") | replace("$", "$$") }}'
       TZ: 'Europe/Zurich'
-{% if pihole.use_host_net %}
-      DNS1: 127.0.0.1#{{ unbound.port }}
-{% else %}
       DNS1: {{ unbound.ipv4 }}#53
-{% endif %}
       DNS2: "no"
       ServerIP: {{ pihole_ipam.ipam.ipv4 }}
 {% if host.supports_v6 %}
@@ -154,13 +150,8 @@ services:
   unbound:
     container_name: {{ unbound.name }}
     # Note: make sure the image supports arm (the image on the latest tag does not)
-    image: mvance/unbound:{{ '1.9.3' if 'development' not in group_names else 'latest' }}
-{% if pihole.use_host_net %}
-    ports:
-      - {{ unbound.port }}:53/udp
-      - {{ unbound.port }}:53/tcp
-{% endif %}
-{%- set vols = [
+    image: {{ 'mvance/unbound-rpi:1.9.3' if 'development' not in group_names else 'mvance/unbound:latest' }}
+{% set vols = [
   volumes.unbound.main
 ] %}
     {{ dv.volumes_mapping_full(vols)|indent }}
@@ -168,7 +159,6 @@ services:
       {{ networks.unbound.name }}:
         ipv4_address: {{ unbound.ipv4 }}
     restart: always
-
 {% set nets = [ networks.unbound ] %}
 {% if pihole.use_host_net == false %}
 {{   nets.append(networks.pihole) }}
