verb 4 and set subnet topology (no more /30 nets)

--- a/roles/vpn/templates/openvpn.conf
+++ b/roles/vpn/templates/openvpn.conf
@@ -6,7 +6,8 @@ server-ipv6 {{ openvpn.conf.server.v6.netaddress }}/{{ openvpn.conf.server.v6.ne
 tun-ipv6
 {% endif %}
 
-verb 3
+verb 4
+topology subnet
 
 key /etc/openvpn/pki/private/vpn.realmar.net.key
 ca /etc/openvpn/pki/ca.crt
