--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -7,6 +7,7 @@ root_dirs:
 networks:
   host:
     v4:
+      subnet: 192.168.1.0/24
       netaddress: 192.168.1.0
       netmask: 255.255.255.0
       gateway: 192.168.1.1
@@ -93,6 +94,7 @@ openvpn:
   autoupdate: no
   network: "{{ networks.vpn }}"
   volumes: "{{ volumes.vpn }}"
+  tun_device_name: tun0
 
   conf:
     dns: vpn.realmar.net
@@ -105,12 +107,12 @@ openvpn:
     server:
       file: openvpn.conf
       v4:
+        subnet: 192.168.255.0/24
         netaddress: 192.168.255.0
         netmask: 255.255.255.0
       v6:
         netaddress: "2a02:120b:2c06:57dc::"
         netmask: 64
-      route_home_network: yes
     client:
       only_dns_over_vpn: yes
 
