--- a/roles/pihole/templates/docker-compose.yml
+++ b/roles/pihole/templates/docker-compose.yml
@@ -30,9 +30,9 @@ version: '3'
 # docker run -v $OVPN_DATA:/etc/openvpn --rm kylemanna/openvpn ovpn_getclient pihole-vpn > $OVPN_DATA/pihole-vpn.ovpn
 #
 
-{% import "pihole_ipam.jinja2" as pihole_ipam with context %}
-{% import "password_gen.jinja2" as gen with context %}
-{% import 'docker_volumes.jinja2' as dv with context %}
+{% import "pihole_ipam.jinja2" as pihole_ipam with context -%}
+{% import "password_gen.jinja2" as gen with context -%}
+{% import 'docker_volumes.jinja2' as dv with context -%}
 
 services:
   openvpn:
@@ -44,19 +44,16 @@ services:
       - "1194:1194/tcp"
 {% endif %}
     environment:
-     #  - VIRTUAL_PORT=${VIRTUAL_PORT_OPENVPN}
-     #  - VIRTUAL_HOST=${VIRTUAL_HOST_OPENVPN}
-     #  - LETSENCRYPT_HOST=${LETSENCRYPT_HOST_VPN}
-     #  - LETSENCRYPT_EMAIL=${LETSENCRYPT_EMAIL}
-     #  - OPENVPN_PROVIDER=${OPENVPN_PROVIDER}
-     #  - OPENVPN_USERNAME=${OPENVPN_USERNAME}
-     #  - OPENVPN_PASSWORD=${OPENVPN_PASSWORD}
-     # - LOCAL_NETWORK=192.168.0.0/24
+    # VIRTUAL_PORT=${VIRTUAL_PORT_OPENVPN}
+    # VIRTUAL_HOST=${VIRTUAL_HOST_OPENVPN}
+    # LETSENCRYPT_HOST=${LETSENCRYPT_HOST_VPN}
+    # LETSENCRYPT_EMAIL=${LETSENCRYPT_EMAIL}
+    # OPENVPN_PROVIDER=${OPENVPN_PROVIDER}
+    # OPENVPN_USERNAME=${OPENVPN_USERNAME}
+    # OPENVPN_PASSWORD=${OPENVPN_PASSWORD}
+    # LOCAL_NETWORK=192.168.0.0/24
       OPENVPN_OPTS: --inactive 3600 --ping 10 --ping-exit 60 -–log-driver json-file --log-opt max-size=10m
-    volumes:
-      - {{ volumes.vpn.config.name }}:{{ volumes.vpn.config.mount }}
-      - /etc/localtime:/etc/localtime:ro
-      - /etc/timezone:/etc/timezone:ro
+    {{ dv.volumes_section_complete([ volumes.vpn.config ])|indent(width = 4) }}
     restart: always
 {% if openvpn.use_host_net %}
     network_mode: host
@@ -102,7 +99,7 @@ services:
     environment:
 {#                 We need to escape $-sign with two $$-signs #}
       WEBPASSWORD: '{{ gen.pw("web") | replace("$", "$$") }}'
-      TZ: 'Europe/Zurich'
+      TZ: {{ timezone }}
       DNS1: {{ unbound.ipv4 }}#53
       DNS2: "no"
       ServerIP: {{ pihole_ipam.ipam.ipv4 }}
@@ -117,14 +114,12 @@ services:
 {% endif %}
       DNSMASQ_LISTENING: all
       DNSMASQ_USER: {{ pihole.user }}
-{% set vols = [
-  volumes.pihole.main ,
-  volumes.pihole.dnsmasq
-] %}
-    volumes:
-      {{ dv.volumes_mapping(vols)|indent(width = 6) }}
-      - /etc/localtime:/etc/localtime:ro
-      - /etc/timezone:/etc/timezone:ro
+    {{ dv.volumes_section_complete(
+      [
+        volumes.pihole.main ,
+        volumes.pihole.dnsmasq
+      ]
+    )|indent(width = 4) }}
     restart: always
 {% if pihole.use_host_net %}
     network_mode: host
