--- a/roles/new_ovpn_user/tasks/main.yml
+++ b/roles/new_ovpn_user/tasks/main.yml
@@ -13,19 +13,31 @@
       'Enter PEM pass phrase:': "{{ user_cert_pw }}"
       'Enter pass phrase for \/etc\/openvpn\/pki\/private\/ca\.key:': "{{ ca_cert_pw }}"
 
+- set_fact:
+    ovpn_name: "{{ vpn_username }}.ovpn"
+
+- set_fact:
+    ovpn_path: "{{ root_dirs.pihole }}/{{ ovpn_name }}"
+
 - name: Store OVPN profile in config directory
-  shell: "docker run -v {{ volumes.vpn.config.local_folder }}:{{ volumes.vpn.config.mount }} --rm kylemanna/openvpn ovpn_getclient {{ vpn_username }} > {{ root_dirs.pihole }}/{{ vpn_username }}.ovpn"
+  shell: "docker run -v {{ volumes.vpn.config.local_folder }}:{{ volumes.vpn.config.mount }} --rm kylemanna/openvpn ovpn_getclient {{ vpn_username }} > {{ ovpn_path }}"
 
 - name: Only route DNS through VPN
   lineinfile:
-    path: "{{ root_dirs.pihole }}/{{ vpn_username }}.ovpn"
+    path: "{{ ovpn_path }}"
     line: "redirect-gateway def1"
     state: absent
   when: openvpn.conf.client.only_dns_over_vpn
 
 - name: Enable IPv6
   lineinfile:
-    path: "{{ root_dirs.pihole }}/{{ vpn_username }}.ovpn"
+    path: "{{ ovpn_path }}"
     line: "tun-ipv6"
     state: present
   when: networks.vpn.v6.enable
+
+- name: Copy OVPN profile to host
+  fetch:
+    src: "{{ ovpn_path }}"
+    dest: "{{ playbook_dir }}/{{ ovpn_name }}"
+    flat: true
