add custom dns entires to unbound config instead of dnsmasq

--- a/roles/pihole/templates/10-custom-dns.conf
+++ b/roles/pihole/templates/10-custom-dns.conf
@@ -1,5 +1,8 @@
+# see unbound a-records.conf
+
+
 {% import "pihole_ipam.jinja2" as pihole_ipam with context %}
-address=/pihole.home/{{ pihole_ipam.ipam.ipv4 }}
+# address=/pihole.home/{{ pihole_ipam.ipam.ipv4 }}
 {% if networks.pihole.v6.enable %}
-address=/pihole.home/{{ pihole_ipam.ipam.ipv6 }}
+# address=/pihole.home/{{ pihole_ipam.ipam.ipv6 }}
 {% endif %}
