--- a/roles/unbound/templates/a-records.conf
+++ b/roles/unbound/templates/a-records.conf
@@ -3,3 +3,13 @@
 
 # PTR Record
         #local-data-ptr: "192.168.1.1 somecomputer.local."
+
+{% import "pihole_ipam.jinja2" as pihole_ipam with context %}
+
+       local-data: "pihole.home. A {{ pihole_ipam.ipam.ipv4 }}"
+       local-data-ptr: "{{ pihole_ipam.ipam.ipv4 }} pihole.home."
+
+{% if networks.pihole.v6.enable %}
+       local-data: "pihole.home. AAAA {{ pihole_ipam.ipam.ipv6 }}"
+       local-data-ptr: "{{ pihole_ipam.ipam.ipv6 }} pihole.home."
+{% endif %}
