--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -4,16 +4,8 @@
     state: latest
     update_cache: yes
 
-- name: Check if is rasbian
-  stat:
-    path: /usr/bin/raspi-config
-  register: raspi_config_check
-
-- set_fact:
-    is_rasbian: "{{ raspi_config_check.stat.exists }}"
-
 - include_tasks: rasbian_stretch.yml
-  when: is_rasbian and ansible_distribution_major_version|int == 9
+  when: is_rpi and ansible_distribution_major_version|int == 9
 
 - include_tasks: debian_platforms.yml
   when: ansible_distribution == 'Debian' and ansible_distribution_major_version|int > 9 or ansible_distribution == 'Ubuntu'
