--- a/roles/base_system/tasks/main.yml
+++ b/roles/base_system/tasks/main.yml
@@ -1,4 +1,27 @@
-- include_tasks: collect_system_data.yml
+- include: collect_system_data.yml
+  tags:
+    - network
+
+- name: Disable password authentication for ssh
+  lineinfile: >
+    dest=/etc/ssh/sshd_config
+    regexp='PasswordAuthentication (yes|no)'
+    line='PasswordAuthentication no'
+  notify: restart ssh
+
+- name: Restrict ssh for root to keys only
+  lineinfile: >
+    dest=/etc/ssh/sshd_config
+    regexp=^PermitRootLogin
+    line='PermitRootLogin without-password'
+  notify: restart ssh
+
+- name: Change root password
+  user:
+    name: root
+    password: "{{ lookup('template', 'standard_pw_gen.jinja2', template_vars=dict(name='root')) | password_hash('sha512') }}"
+    update_password: on_create
+  tags: pw
 
 - name: Install base packages
   apt:
@@ -32,27 +55,6 @@
 - include_tasks: vim.yml
   tags: vim
 
-- name: Disable password authentication for ssh
-  lineinfile: >
-    dest=/etc/ssh/sshd_config
-    regexp='PasswordAuthentication (yes|no)'
-    line='PasswordAuthentication no'
-  notify: restart ssh
-
-- name: Restrict ssh for root to keys only
-  lineinfile: >
-    dest=/etc/ssh/sshd_config
-    regexp=^PermitRootLogin
-    line='PermitRootLogin without-password'
-  notify: restart ssh
-
-- name: Change root password
-  user:
-    name: root
-    password: "{{ lookup('template', 'standard_pw_gen.jinja2', template_vars=dict(name='root')) | password_hash('sha512') }}"
-    update_password: on_create
-  tags: pw
-
 - name: Set hostname
   hostname:
     name: "{{ host.name }}"
@@ -66,8 +68,8 @@
 - include_tasks: unattended_upgrades.yml
   tags: unattended_upgrades
 
-- include_tasks: network.yml
-  when: "'development' not in group_names"
+- include: network.yml
+  when: not is_dev
   tags: network
 
 - meta: flush_handlers
