--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -8,6 +8,6 @@
   when: is_rpi and ansible_distribution_major_version|int == 9
 
 - include_tasks: debian_platforms.yml
-  when: ansible_distribution == 'Debian' and ansible_distribution_major_version|int > 9 or ansible_distribution == 'Ubuntu'
+  when: is_debian and ansible_distribution_major_version|int > 9 or is_ubuntu
 
 - meta: flush_handlers
