Add samba fileserver

--- a/02_add_vpn_user.yml
+++ b/02_add_vpn_user.yml
@@ -7,5 +7,9 @@
 #   - vpn_username
 #
 
+  pre_tasks:
+    - include: tasks/collect_system_data.yml
+      tags: always
+
   roles:
     - new_ovpn_user
