--- a/01_deployment_pihole.yml
+++ b/01_deployment_pihole.yml
@@ -1,13 +1,18 @@
-- hosts: development
+- hosts: production
   gather_facts: yes
   remote_user: root
   debugger: on_failed
 
+  pre_tasks:
+    - include: tasks/collect_system_data.yml
+      tags: always
+
   roles:
     - { role: pihole, tags: pihole }
     - { role: maintenance, tags: maintenance }
+    - { role: fileserver, tags: fileserver }
 
-  tasks:
+  post_tasks:
     # big hackkus, permissions should be set on deploy
     - name: Fix permissions
       file:
