--- a/roles/base_system/tasks/main.yml
+++ b/roles/base_system/tasks/main.yml
@@ -1,7 +1,3 @@
-- include: collect_system_data.yml
-  tags:
-    - network
-
 - name: Disable password authentication for ssh
   lineinfile: >
     dest=/etc/ssh/sshd_config
@@ -51,6 +47,7 @@
       - dnsutils
       - tcpdump
       - tmux
+      - lvm2
 
 - include_tasks: vim.yml
   tags: vim
