--- a/handlers/restart_compose_container.yml
+++ b/handlers/restart_compose_container.yml
@@ -7,6 +7,11 @@
 #     }
 #
 
+- shell: "docker container ls | grep {{ item.name }}"
+  register: exists
+  failed_when: false
+
 - shell: "docker-compose restart {{ item.name }}"
   args:
     chdir: "{{ item.dir }}"
+  when: exists.rc == 0
